--- a/templates/index.html
+++ b/templates/index.html
@@ -61,6 +61,8 @@
             <option value="us-east-1">US East (N. Virginia)</option>
             <option value="us-east-2">US East (Ohio)</option>
             <option value="us-west-1">US West (N. California)</option>
+            <option value="ap-south-1">Mumbai</option>
+            <option value="eu-central-1">Frankfurt</option>
             <!-- Add more options for other regions -->
         </select><br><br>
         <input type="submit" value="Set Credentials">
